general/platform-components/helm/kyverno-policies/tests/verifyImage/resources/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: verified-pod
  namespace: kyverno-test
spec:
  containers:
    - name: test
      image: ghcr.io/kyverno/test-verify-image:signed
---
apiVersion: v1
kind: Pod
metadata:
  name: unverified-pod
  namespace: kyverno-test
spec:
  containers:
    - name: test
      image: ghcr.io/kyverno/test-verify-image:unsigned
---
apiVersion: v1
kind: Pod
metadata:
  name: excluded-pod
  namespace: kube-system
spec:
  containers:
    - name: test
      image: ghcr.io/kyverno/test-verify-image:unsigned
