general/platform-components/helm/kyverno-policies/tests/verifyImage/values.yaml
---
bestPractices:
  enabled: true
  verifyImage:
    enabled: true
    webhookFailurePolicy: Fail
    enableBackgroundScanning: true
    actionOverride: Enforce
    # must be set to false, as the template never sends a failureaction for therule,
    # otherwise itś audit
    # verifyDigest is false so tag-based image reference is accepted
    mutateDigest: false
    verifyDigest: false
    excludeNamespaces: [kube-system]
    imagesAndPublicKeyPairs:
      # this is the key the kyverno policy checks against
      # if this changes in the future, the key needs to be updated
      - image: ghcr.io/kyverno/test-verify-image*
        key: |-
          -----BEGIN PUBLIC KEY-----
          MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEstG5Xl7UxkQsmLUxdmS85HLgYBFy
[...]
          -----END PUBLIC KEY-----
